ui/src/routes/styles.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@layer components {
    .app {
        @apply flex h-screen;
    }

    .main {
        @apply flex flex-col flex-grow;
    }

    .sidebar {
        @apply min-w-64 bg-gray-800 text-white;
    }

    .nav {
        @apply p-4;
    }

    .nav-item {
        @apply mb-4 block w-full px-4 py-2 text-left
    }

    .topbar {
        @apply h-16 bg-gray-900 text-white flex items-center justify-between px-4;
    }

    .search {
        @apply flex items-center;
    }

    .card {
        @apply bg-white rounded shadow p-4;
    }
}

